Fixed ObservableActivation non-nullable recurrence flags - Updated unit tests accordingly - Fixed non-recurring Activation constructor - Also added a unit test to  AccessibilitySettingsViewModelTest - Fixed EnergyUsageViewModel unit test for clamping.